<resources>
    <string name="app_name">920 Text Editor</string>
    <string name="open">Open</string>
    <string name="select_file">Select a file</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="encoding">Encoding</string>
    <string name="save_succ">Successfully saved!</string>
    <string name="save_changes_to">Save changes to %s ?</string>
    <string name="save_changes">Save changes?</string>
    <string name="save">Save</string>
    <string name="filename_is_empty">File name must not be empty!</string>
    <string name="new_filename">Untitled</string>
    <string name="highlight">Highlighting And Color Scheme</string>
    <string name="search_replace">Search/Replace</string>
    <string name="options">Options</string>
    <string name="preferences">Preferences</string>
    <string name="saveas">Save As</string>
    <string name="reopen">Recent Files</string>
    <string name="history">Recent files...</string>
    <string name="file_not_exists">File does not exist!</string>
    <string name="replace">Replace</string>
    <string name="replace_all">All</string>
    <string name="spinner_message">Processing</string>
    <string name="searching">Please wait while searching...</string>
    <string name="not_found">Not found!</string>
    <string name="replace_finish">All words has been replaced!</string>
    <string name="font">Font</string>
    <string name="font_size">Font Size</string>
    <string name="view">View</string>
    <string name="word_wrap">Word Wrap</string>
    <string name="show_line_num">Show linenumbers</string>
    <string name="show_tab">Show Tab/Linebreak</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="screen_orientation_auto">Auto Rotate</string>
    <string name="screen_orientation_portrait">Portrait</string>
    <string name="screen_orientation_landscape">Landscape</string>
    <string name="enable_highlight">Syntax highlighting</string>
    <string name="highlight_limit">Maximum file size to highlight</string>
    <string name="highlight_limit_message">File larger than the limit will not be highlighted; Unit: kb</string>
    <string name="request_restart">* Request restarting</string>
    <string name="label_version">Version</string>
    <string name="label_author">Author</string>
    <string name="label_email">Email</string>
    <string name="label_homepage">Homepage</string>
    <string name="label_license">License</string>
    <string name="field_license">"Copyright (C) 2011-2012 Jecelyin Peng
 920 Text Editor is a free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
 920 Text Editor is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 You should have received a copy of the GNU General Public License along with this program; if not, see http://www.gnu.org/licenses."</string>
    <string name="about">About</string>
    <string name="myname">Jecelyin</string>
    <string name="myemail">jecelyin@gmail.com</string>
    <string name="myhomepage">https://github.com/jecelyin/920-Text-Editor</string>
    <string name="loading">Loading...</string>
    <string name="highlight_stop_msg">Highlighting has stopped beacause the file size exceeds the limit.</string>
    <string name="search">Search</string>
    <string name="search_regex">Regular Expression</string>
    <string name="search_ignore_case">Ignore Case</string>
    <string name="search_error">Failed to find keyword. Maybe your are using regular expressions without enabling it.</string>
    <string name="Other">Other</string>
    <string name="open_last_file">Remember last opened file</string>
    <string name="open_last_file_summary">When editor starts, automatically load the last opened file</string>
    <string name="readonly_mode">ReadOnly Mode</string>
    <string name="auto_indent">Auto Indent</string>
    <string name="clear_history">Clear History</string>
    <string name="clear_history_ok">History has been cleared.</string>
    <string name="exit">Exit</string>
    <string name="keep_screen_on_summary">Keep the screen awake while working</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="help">Help</string>
    <string name="donate">Donate...</string>
    <string name="show_ime">Show Input Method</string>
    <string name="to_lower">Convert to Lowercase</string>
    <string name="to_upper">Convert to Uppercase</string>
    <string name="out_of_memory">Not enough memory to open the file!</string>
    <string name="exception">Exception occurs, execution fails!</string>
    <string name="back_button_exit">Press the \"Back button\" to exit</string>
    <string name="preview_msg">File must be saved before previewing</string>
    <string name="goto_line">Go to Line...</string>
    <string name="can_not_gotoline">Can not jump to the specified line</string>
    <string name="have_not_saved_doc">You haven\'t saved the document!</string>
    <string name="get_root_title">Try to Run as ROOT</string>
    <string name="open_with">Open With...</string>
    <string name="rename">Rename...</string>
    <string name="delete">Delete...</string>
    <string name="qq_group">QQ Group</string>
    <string name="rename_failed">Rename failed!</string>
    <string name="confirm_delete">Are you sure you wish to delete this file?</string>
    <string name="save_failed">Save failed!</string>
    <string name="can_not_create_temp_path">Can not create temporary directory, please check your SDCard!</string>
    <string name="donate_summary">Open donate page via browser</string>
    <string name="get_root_summary">*You may need to use other tools to mount the partition as rw</string>
    <string name="volume_up_toolbar_msg">Toolbar has been hidden, you can press the volume down key to display it</string>
    <string name="volume_up_fullscreen_msg">You have gone full screen. Press the Volume Down key to return.</string>
    <string name="autosave">Auto Save</string>
    <string name="autosave_summery">When the editor is not currently active, automatically save changes.</string>
    <string name="has_autosave">Current document has been saved automatically.</string>
    <string name="overwrite_confirm">File already exists. Are you sure to overwrite it?</string>
    <string name="use_custom_hl_color">Use custom highlight scheme</string>
    <string name="use_custom_hl_color_msg">If disabled, the editor will use default color scheme</string>
    <string name="custom_hl_color">Custom Highlight Color</string>
    <string name="string_color">String Color</string>
    <string name="keyword_color">Keyword Color</string>
    <string name="comment_color">Comment Color</string>
    <string name="tag_color">Tag Color (e.g. &amp;lt;?php)</string>
    <string name="function_color">Function Color</string>
    <string name="attr_color">Attribute name Color</string>
    <string name="current_color">Current Color:</string>
    <string name="invalid_color">Invalid Value of Color</string>
    <string name="insert_color">Insert a Color</string>
    <string name="font_color">Font Color</string>
    <string name="backgroup_color">Background Color</string>
    <string name="can_not_create_synfile">Failed to extract syntax scheme. Please check if your SD card has enough space.</string>
    <string name="can_not_list_file">Failed to read file list, please try to switch Root privileges in the Preferences menu</string>
    <string name="go_to_begin">Scroll to top</string>
    <string name="go_to_end">Scroll to bottom</string>
    <string name="report_bug">Report an Issue</string>
    <string name="project_homepage">Help Translate it</string>
    <string name="convert_linebreak_char">Convert Line Break</string>
    <string-array name="linebreak_chars">
        <item>No change</item>
        <item>CR+LF (Windows)</item>
        <item>LF Only(Unix/Android)</item>
        <item>CR Only(Macintosh)</item>
    </string-array>
    <string name="hide_ime">Hide Input Method</string>
    <string name="changelog">Change Log</string>
    <string name="open_pipe">Open With</string>
    <string name="donate_info">Donate us if you like this App!</string>
    <string name="share">Share(Send Text)</string>
    <string name="open_mode">Open Mode</string>
    <string name="auto_detection">Auto detect</string>
    <string name="tab_close_other">Close Other Tabs</string>
    <string name="tab_close_right">Close Right Tabs</string>
    <string name="tab_close_all">Close All Tabs</string>
    <string name="insert_datetime">Insert Time:</string>
    <string name="default_color_scheme">Default</string>
    <string name="color_scheme">Color Scheme</string>
    <string name="touch_zoom">Touch to Adjust Text Size</string>
    <string name="selectAll">Select all</string>
    <string name="selectText">Select text</string>
    <string name="stopSelectingText">Stop selecting text</string>
    <string name="cut">Cut</string>
    <string name="cutAll">Cut all</string>
    <string name="copy">Copy</string>
    <string name="copyAll">Copy all</string>
    <string name="paste">Paste</string>
    <string name="copyUrl">Copy URL</string>
    <string name="editTextMenuTitle">Edit text</string>
    <string name="duplicate_line">Duplicate Current Line</string>
    <string name="duplicate_selected_text">Duplicate Selected text</string>
    <string name="doc_stat">Document Statistics</string>
    <string name="filename">Filename: </string>
    <string name="total_chars">Total Characters: </string>
    <string name="total_lines">Total Lines: </string>
    <string name="total_words">Total Words: </string>
    <string name="auto_capitalize">Auto capitalize</string>
    <string name="auto_capitalize_summary">Capitalize the first word of each sentence.\nThis feature depends on IME.\nRequest restart.</string>
    <string name="can_not_open_file">Can not open file!</string>
    <string name="date_format">Date and Time Format</string>
    <string name="use_selected_format">Using the selected format</string>
    <string name="use_custom_format">Using a custom format</string>
    <string name="date_format_title">Use Date and Time Patterns of the java.text.SimpleDateFormat</string>
    <string name="date_format_summary">yyyy:Year, MM:Month, dd:Date, HH:Hour, mm:Minute, ss:Second</string>
    <string name="editors">Editors</string>
    <string name="disable_spell">Disable spell checking</string>
    <string name="use_system_menu">Using the system menu</string>
    <string name="use_system_menu_summary">Try to fix not be able to copy and paste.</string>
    <string name="run_in_sl4a_terminal">Run in SL4A (Terminal)</string>
    <string name="run_in_sl4a_background">Run in SL4A (Background)</string>
    <string name="run_before_save_file">Run the file must be saved before it.</string>
    <string name="not_found_up">Cannot find %s above the current position!</string>
    <string name="not_found_next">Cannot find %s below the current position!</string>
    <string name="keyword">Keyword: </string>
    <string name="path_not_correct">The path is not correct! </string>
    <string name="keyword_notbe_empty">Keywords can not be empty!</string>
    <string name="find_result">Found %s results!</string>
    <string name="line_num">Line %s: </string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="use_space_for_tab">Insert spaces for tabs</string>
    <string name="indent_size">Indent size</string>
    <string name="cursor_width">Cursor Width</string>
</resources>