<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="other"
        android:title="@string/Other" >

        <CheckBoxPreference android:title="@string/autosave" android:key="autosave" android:summary="@string/autosave_summery" android:defaultValue="false"/><CheckBoxPreference
            android:defaultValue="false"
            android:key="open_last_file"
            android:summary="@string/open_last_file_summary"
            android:title="@string/open_last_file" >
        </CheckBoxPreference>
        
        <ListPreference
            android:dialogTitle="@string/screen_orientation"
            android:key="screen_orientation"
            android:summary="@string/request_restart"
            android:title="@string/screen_orientation" >
        </ListPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="readonly_mode"
            android:title="@string/readonly_mode" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="keep_screen_on"
            android:summary="@string/keep_screen_on_summary"
            android:title="@string/keep_screen_on" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="back_button_exit"
            android:title="@string/back_button_exit" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="get_root"
            android:summary="@string/get_root_summary"
            android:title="@string/get_root_title" >
        </CheckBoxPreference>
        <CheckBoxPreference android:title="@string/auto_capitalize" android:summary="@string/auto_capitalize_summary" android:defaultValue="false" android:key="auto_capitalize"/>
        
    </PreferenceCategory>

</PreferenceScreen>