<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="view"
        android:title="@string/view" >

        <ListPreference
            android:defaultValue="Monospace"
            android:key="font"
            android:title="@string/font" >
        </ListPreference>

        <ListPreference
            android:defaultValue="14"
            android:key="font_size"
            android:title="@string/font_size" >
        </ListPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="touch_zoom"
            android:title="@string/touch_zoom" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wordwrap"
            android:title="@string/word_wrap" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_line_num"
            android:title="@string/show_line_num" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_tab"
            android:title="@string/show_tab" >
        </CheckBoxPreference>

        <ListPreference
            android:defaultValue="auto"
            android:dialogTitle="@string/screen_orientation"
            android:entries="@array/screen_orientation_name"
            android:entryValues="@array/screen_orientation_value"
            android:key="screen_orientation"
            android:summary="@string/request_restart"
            android:title="@string/screen_orientation" >
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>